--- a/Animated Image Gallery/index.html
+++ b/Animated Image Gallery/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div class="header">
+<!--     <div class="header">
       <h1>Deadpool X Wolverine</h1>
-    </div>
+    </div> -->
     <div class="container">
       <div class="card">
         <img src="3.jpg">
